<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/typeTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_parking_24"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        android:hint="@string/vehicle_type">

        <AutoCompleteTextView
            android:id="@+id/typeAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cylinderTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cylinder"
        android:visibility="gone"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_moto_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cyilinderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/licensePlateTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_document_24"
            app:endIconMode="clear_text"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/license_plate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/licensePlateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textCapCharacters"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>