<resources>
    <string name="app_name">Parking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="enter">INGRESAR VEHICULO</string>
    <string name="leave">SACAR VEHICULO</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="vehicle_type">Tipo de vehiculo</string>
    <string name="license_plate">Placa</string>
    <string name="cylinder">Cilindraje</string>
    <string name="edit_text_search">Escriba la placa</string>
    <string name="list_is_empty">No se encontraron resultados</string>
    <string name="accept">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="enter_vehicle_tittle">INGRESAR VEHICULO</string>
    <string name="leave_vehicle_tittle">SACAR VEHICULO</string>

</resources>